Android ObjBrowser: Use the smart save button
This provides visual feedback on the success or failure of
saves.  Currently it is not mapped to any of the fields though
so doesn't actually move any changes.

--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -25,7 +25,7 @@
 	<string name="connected">Connected</string>
 	<string name="update_button">Update</string>
 	<string name="save_button">Save</string>
-	<string name="send_button">Send</string>
+	<string name="apply_button">Apply</string>
 	<string name="manual_control_values_">Manual control values:</string>
 	<string name="number_of_objects">Number of objects</string>
 	<string name="number_of_bytes">Number of bytes</string>
