--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -51,4 +51,6 @@
 	<string name="uiToastLightOff">Light OFF</string>
 
 	<string name="select_file_to_email_it">Select file to email it</string>
+
+	<string name="jump_to_uav">Jump To UAV</string>
 </resources>
