Android: Connect buttons for resetting home location and altitude

--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -67,4 +67,8 @@
 	<string name="objecteditor">ObjectEditor</string>
 
 	<string name="logger">Logger</string>
+
+	<string name="reset_home_to_tablet">Reset Home to Tablet</string>
+
+	<string name="these_buttons_only_work_while_disarmed_">These buttons only work while disarmed.</string>
 </resources>
