--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -53,4 +53,6 @@
 	<string name="select_file_to_email_it">Select file to email it</string>
 
 	<string name="jump_to_uav">Jump To UAV</string>
+
+	<string name="advanced_screens">advanced_screens</string>
 </resources>
