Android Tablet Mode: update UI for toggling POI track mode
This used to be one of the flight modes and thus exclusive with
FollowMe.  Now it is an independent check box.

Conflicts:
	androidgcs/res/values/strings.xml

--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -77,4 +77,10 @@
 	<string name="these_buttons_only_work_while_disarmed_">These buttons only work while disarmed.</string>
 
 	<string name="zero_tablet_poi_to_uav">Zero tablet POI to UAV</string>
+
+	<string name="flight_mode_">"Flight Mode: "</string>
+
+	<string name="disarmed">Disarmed</string>
+
+	<string name="armed_">"Armed: "</string>
 </resources>
