Android: add path to the map
This is just the beginning. Optimally it would store the
history of the paths for the whole connection period so
it was not just persistent while the map was apparent.

--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -84,4 +84,6 @@
 	<string name="disarmed">Disarmed</string>
 
 	<string name="armed_">"Armed: "</string>
+
+	<string name="clear_uav_path">Clear UAV Path</string>
 </resources>
