--- a/androidgcs/Changelog
+++ b/androidgcs/Changelog
@@ -1,3 +1,9 @@
+0.30
+- Major overhaul of navigation structure, now uses navigation drawer
+- Make map show the path and also preserve zoom level between views
+- Improvements to tablet layout for portrait and landscape mode
+- Fix layout issues for higher resolution screen with the attitude widget
+
 0.12
 - Update objects
 - Fix crash on disconnect from audio
