Android: clean up object browser view

--- a/androidgcs/res/values/strings.xml
+++ b/androidgcs/res/values/strings.xml
@@ -86,4 +86,6 @@
 	<string name="armed_">"Armed: "</string>
 
 	<string name="clear_uav_path">Clear UAV Path</string>
+
+	<string name="close_button">Close</string>
 </resources>
